objects/AR_Slalom__c.object
<CustomObject>
    <fields>
        <fullName>AR_custfield_Slalom__c</fullName>
        <label>AR-custfield-Slalom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testfield1__c</fullName>
        <label>Testfield1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testfield2__c</fullName>
        <label>Testfield2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AR-Slalom</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AR-Slalom  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-Slaloms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>